--- a/views/booking_categories_management.erb
+++ b/views/booking_categories_management.erb
@@ -571,7 +571,7 @@
 
         <%% if (entity.type == 'resource') { %>
 
-        <div class="row">
+        <!--div class="row">
           <div class="col-sm-12 col-md-10 col-md-offset-1">
             <div class="block ">
               <div class="block-header bg-gray-lighter">
@@ -620,7 +620,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div-->
 
 
         <%% } %>
